# QtDataVisualisation

./: .gitignore  CMakeLists.txt  README.MD  main.cpp  main.qml  qml.qrc
App/: Application.cpp  Application.hpp  PopulationItem.hpp  Repository.cpp  Repository.hpp
App/Model/: PopList.cpp  PopList.hpp  PopModel.cpp  PopModel.hpp
Bootloader/: Startup.cpp  Startup.hpp
CMake/: QXlsxConfig.cmake
Resources/: main.qml
